# telegram-lols-kicker

./: .env.sample  LICENSE  README.md  README.ru.md  main.py  pyproject.toml  setup_bot.py
.github/workflows/: deploy.yaml  static-checks.yaml
